FIX | Content overflow of comment

--- a/components/CommentCard/style.module.scss
+++ b/components/CommentCard/style.module.scss
@@ -49,6 +49,7 @@
     font-size: 13px;
     line-height: 19px;
     color: #647196;
+    word-break: break-all;
 
     .replyingTo {
       font-weight: 700;
